--- a/app/views/lab_tests/show.html.erb
+++ b/app/views/lab_tests/show.html.erb
@@ -25,8 +25,8 @@
   <%=h @lab_test.decimals %>
 </p>
 <p>
-  <strong>Units::</strong>
-  <%=h @lab_test.lab_test_unit.name %>
+  <strong>Units:</strong>
+  <%= @lab_test.lab_test_unit.name %>
 </p>
 
 <p>
