--- a/app/views/lab_test_results/_form.html.erb
+++ b/app/views/lab_test_results/_form.html.erb
@@ -6,7 +6,7 @@
   </p>
   <p>
     <%= f.label :lab_test_id %><br />
-    <%= f.text_field :lab_test_id %>
+    <%= f.collection_select :lab_test_id, LabTest.all, :id, :name %>
   </p>
   <p>
     <%= f.label :accession_id %><br />
