--- a/app/views/lab_tests/index.html.erb
+++ b/app/views/lab_tests/index.html.erb
@@ -18,7 +18,7 @@
       <td><%=h lab_test.procedure %></td>
       <td><%=h lab_test.description %></td>
       <td><%=h lab_test.decimals %></td>
-      <td><%=h lab_test.lab_test_unit.name %></td>
+      <td><%= lab_test.lab_test_unit.name %></td>
       <td><%= link_to "Show", lab_test %></td>
       <td><%= link_to "Edit", edit_lab_test_path(lab_test) %></td>
       <td><%= link_to "Destroy", lab_test, :confirm => 'Are you sure?', :method => :delete %></td>
