--- a/app/views/lab_test_departments/edit.html.erb
+++ b/app/views/lab_test_departments/edit.html.erb
@@ -1,8 +1,7 @@
-<% title "Edit Lab Test Department" %>
+<% title "Edit Department" %>
 
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to "Show", @lab_test_department %> |
   <%= link_to "View All", lab_test_departments_path %>
 </p>
