--- a/app/views/lab_test_departments/index.html.erb
+++ b/app/views/lab_test_departments/index.html.erb
@@ -1,17 +1,24 @@
-<% title "Lab Test Departments" %>
+<% title "Departments" %>
 
-<table>
-  <tr>
-    <th>Name</th>
-  </tr>
-  <% for lab_test_department in @lab_test_departments %>
-    <tr>
-      <td><%=h lab_test_department.name %></td>
-      <td><%= link_to "Show", lab_test_department %></td>
-      <td><%= link_to "Edit", edit_lab_test_department_path(lab_test_department) %></td>
-      <td><%= link_to "Destroy", lab_test_department, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
+<div id="departments">
+  <ul>
+    <% for department in @lab_test_departments %>
+      <li><%= link_to department.name, lab_test_departments_url(:anchor => department.id) %></li>
+    <% end %>
+    <li><%= link_to "+", new_lab_test_department_path %></li>
+  </ul>
+  
+  <% for department in @lab_test_departments %>
+    <div id="<%= department.id %>">
+      <ul>
+      <% for lab_test in department.lab_tests %>
+        <li><%=h lab_test.name %></li>
+      <% end %>
+      </ul>
+      <p>
+        <%= link_to "Edit", edit_lab_test_department_path(department) %> |
+        <%= link_to "Delete", department, :confirm => 'Are you sure?', :method => :delete %>
+      </p>
+    </div>
   <% end %>
-</table>
-
-<p><%= link_to "New Lab Test Department", new_lab_test_department_path %></p>
+</div>
