--- a/app/views/lab_test_results/new.html.erb
+++ b/app/views/lab_test_results/new.html.erb
@@ -1,5 +1,16 @@
-<% title "New Lab Test Result" %>
+<% title "Order Tests" %>
 
-<%= render :partial => 'form' %>
+<% form_for @lab_test_result do |f| %>
+  <%= f.error_messages %>
+  <p>
+    <%= f.label :lab_test_id %><br />
+    <%= f.collection_select :lab_test_id, LabTest.all, :id, :name %>
+  </p>
+  <p>
+    <%= f.label :accession_id %><br />
+    <%= f.text_field :accession_id %>
+  </p>
+  <p><%= f.submit "Submit" %></p>
+<% end %>
 
 <p><%= link_to "Back to List", lab_test_results_path %></p>
