--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,25 +1,27 @@
 <% title "Patients" %>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Gender</th>
-    <th>Age</th>
-    <th>Identifier</th>
-    <th>Address</th>
-  </tr>
-  <% for patient in @patients %>
-    <tr>
-      <td><%=h patient.full_name %></td>
-      <td><%=h patient.gender %></td>
-      <td><%=h patient.age %></td>
-      <td><%=h patient.identifier %></td>
-      <td><%=h patient.address %></td>
-      <td><%= link_to "Show", patient %></td>
-      <td><%= link_to "Edit", edit_patient_path(patient) %></td>
-      <td><%= link_to "Destroy", patient, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
-  <% end %>
-</table>
+<% form_tag patients_path, :method => 'get' do %>
+  <p class="content">
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
+<% if @patients.empty? %>
+  <p class="content">No patients found. <%= link_to "All patients", patients_path %></p>
+<% else %>
+  <div class="patients">
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Gender</th>
+        <th>Age</th>
+        <th>Identifier</th>
+        <th>Address</th>
+      </tr>
+      <%= render @patients %>
+    </table>
+  </div>
+<% end %>
 
 <p><%= link_to "New Patient", new_patient_path %></p>
