--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,7 +16,7 @@ h2 {
 
 body,
 #ui-datepicker-div,
-#departments {
+#lab_tests {
   font-family: "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif;
 	font-size: 13px;
 }
