--- a/app/views/accessions/edit.html.erb
+++ b/app/views/accessions/edit.html.erb
@@ -1,8 +1,45 @@
-<% title "Edit Accession ID " + @accession.id.to_s %>
+<% title "Enter Results" %>
 
-<%= render :partial => 'form' %>
+<% form_for @accession do |f| %>
+  <%= f.error_messages %>
+  <p>
+    <strong>Patient:</strong>
+    <%=h @accession.patient.full_name %>
+  </p>
+  <p>
+    <%= f.label :drawn_at %><br />
+    <%= f.date_select :drawn_at %>
+  </p>
+  
+  <h3>Results</h3>
+  <table>
+  <% @accession.lab_test_results.each do |result| %>
+    <% prefix = "accession[existing_result_attributes][]" %>
+    <% fields_for prefix, result do |r| %>
+      <tr>
+        <td><%=h result.lab_test.name %></td>
+        <td>
+          <% if result.lab_test.derivation %>
+            (calc.)
+          <% else %>
+            <% if result.lab_test.lab_test_values.blank? %>
+              <%= r.text_field :value %>
+            <% else %>
+              <%= r.collection_select :value, result.lab_test.lab_test_values, :id, :value, :prompt => "Select" %>
+            <% end %>
+          <% end %>
+        </td>
+        <td><%=h result.lab_test.lab_test_unit.name if result.lab_test.lab_test_unit %></td>
+        <td><%=h result.range %></td>
+      </tr>
+    <% end %>
+  <% end %>
+  </table>
+    
+  <p>
+    <%= f.submit "Save" %>
+    <%= f.submit "Report", :reported_at => Time.now %>
+  </p>  
+<% end %>
 
-<p>
-  <%= link_to "Show", @accession %> |
-  <%= link_to "View All", accessions_path %>
-</p>
+<%= link_to "Report", @accession %>
