--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <ul id="menu">
       <li><%= link_to "Patients", :patients %></li>
-      <li><%= link_to "Order Tests", :new_lab_test_result %></li>
+      <li><%= link_to "Accessions", :accessions %></li>
     </ul>
     <div id="container">      
       <%- flash.each do |name, msg| -%>
