--- a/app/views/lab_test_results/edit.html.erb
+++ b/app/views/lab_test_results/edit.html.erb
@@ -1,20 +1,44 @@
-<% title "Edit Lab Test Result" %>
+<% title "Enter Results" %>
 
-<% form_for [@accession, @lab_test_result] do |f| %>
+<% form_for @accession do |f| %>
   <%= f.error_messages %>
   <p>
-    <%= f.label :value %><br />
-    <% unless @lab_test_result.lab_test.lab_test_value_options.blank? %>
-      <% unless @lab_test_result.lab_test.lab_test_value_options.first.lab_test_values.nil? %>
-        <%= f.collection_select :value, @lab_test_result.lab_test.lab_test_value_options.first.lab_test_values, :id, :value %>
-      <% end %>
-    <% else %>
-      <%= f.text_field :value %>
-    <% end %>
+    <strong>Patient:</strong>
+    <%=h @accession.patient.full_name %>
   </p>
-  <p><%= f.submit "Submit" %></p>
+  <p>
+    <%= f.label :drawn_at %><br />
+    <%= f.date_select :drawn_at %>
+  </p>
+  
+  <h3>Results</h3>
+  <table>
+  <% @accession.lab_test_results.each do |result| %>
+    <% prefix = "accession[existing_result_attributes][]" %>
+    <% fields_for prefix, result do |r| %>
+      <tr>
+        <td><%=h result.lab_test.name %></td>
+        <td>
+          <% if result.lab_test.derivation %>
+            (calc.)
+          <% else %>
+            <% if result.lab_test.lab_test_values.blank? %>
+              <%= r.text_field :value %>
+            <% else %>
+              <%=h LabTestValue.find(result.value).value %>
+              <%= r.collection_select :value, result.lab_test.lab_test_values, :id, :value, :prompt => "Select" %>
+            <% end %>
+          <% end %>
+        </td>
+        <td><%=h result.lab_test.lab_test_unit.name if result.lab_test.lab_test_unit %></td>
+        <td><%=h result.range %></td>
+      </tr>
+    <% end %>
+  <% end %>
+  </table>
+    
+  <p>
+    <%= f.submit "Save" %>
+    <%= f.submit "Report", :reported_at => Time.now %>
+  </p>  
 <% end %>
-
-<p>
-  <%= link_to "View All", accession_lab_test_results_path %>
-</p>
