--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
 <% title "New Patient" %>
 
-<%= render :partial => 'form' %>
+<%= render 'form' %>
 
 <p><%= link_to "Back to List", patients_path %></p>
